--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,10 @@
     --color-body: #918ca4;
 }
 
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
 /* Typography */
 html {
     font-size: 62.5%;
@@ -166,4 +170,76 @@ a {
     height: 64px;
     justify-content: center;
     width: 64px;
+}
+
+/* Buttons */
+
+.btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin: 1rem 0;
+    padding: 2rem 3rem;
+    text-align: center;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+
+.btn--primary {
+    background: var(--color-primary);
+    border: 2px solid var(--color-primary);
+    color: white;
+}
+
+.btn--secondary {
+    background: var(--color-secondary);
+    border: 2px solid var(--color-secondary);
+    color: white;
+}
+
+.btn--accent {
+    background: var(--color-accent);
+    border: 1px solid var(--color-accent);
+    color: white;
+}
+
+.btn--outline {
+    background: white;
+    border: 2px solid var(--color-headings);
+    color: var(--color-headings);
+}
+
+.btn--block {
+    align-items: center;
+    background: var(--color-accent);
+    border: 1px solid var(--color-accent);
+    color: white;
+    display: inline-flex;
+    font-size: medium;
+    justify-content: center;
+    width: 100%;
+}
+
+.icon-btn {
+    fill: white;
+    height: 25px;
+    margin-right: 15px;
+    width: 25px;
+}
+
+.btn--primary:hover, .btn--secondary:hover, .btn--accent:hover, .btn--block:hover {
+    filter: brightness(110%);
+}
+
+.btn--outline:hover {
+    color: white;
+    background: var(--color-headings);
+}
+
+@media screen and (min-width:1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
