--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,8 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4;
+    --color-border: #ccc;
+    --border-radius: 30px;
 }
 
 *, *::after, *::before {
@@ -222,13 +224,6 @@ a {
     width: 100%;
 }
 
-.icon-btn {
-    fill: white;
-    height: 25px;
-    margin-right: 15px;
-    width: 25px;
-}
-
 .btn--primary:hover, .btn--secondary:hover, .btn--accent:hover, .btn--block:hover {
     filter: brightness(110%);
 }
@@ -240,6 +235,44 @@ a {
 
 @media screen and (min-width:1024px) {
     .btn {
+        font-size: 1.5rem;
+    }
+}
+
+/* Inputs */
+
+.input {
+    border-radius: var(--border-radius);
+    border: 3px solid var(--color-border);
+    color: var(--color-headings);
+    font-size: 2rem;
+    outline: 0;
+    padding: 1.5rem 3.5rem;
+
+}
+
+::placeholder {
+    color:  #cbcdc7;
+}
+
+.input-group {
+    border-radius: var(--border-radius);
+    border: 1px solid var(--color-border);
+    display: flex;
+}
+
+.input-group .input {
+    border: 0;
+    flex-grow: 1;
+    padding: 1.5rem 1rem;
+}
+
+.input-group .btn {
+    margin: 4px;
+}
+
+@media screen and (min-width: 1024px) {
+    .input {
         font-size: 1.5rem;
     }
 }
