--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -243,7 +243,6 @@ a {
     font-size: 2rem;
     outline: 0;
     padding: 1.5rem 3.5rem;
-
 }
 
 ::placeholder {
@@ -302,9 +301,9 @@ a {
 
 .plan__name {
     color: #fff;
-    margin: 0;
-    font-weight: 500;
     font-size: 2.4rem;
+    font-weight: 500;
+    margin: 0;
 }
 
 .plan__price {
@@ -314,15 +313,15 @@ a {
 .plan__billing-cycle {
     font-size: 2.4rem;
     font-weight: 300;
-    opacity: .8;
     margin-right: 1rem;
+    opacity: .8;
 }
 
 .plan__description {
+    display: block;
     font-size: 2rem;
     font-weight: 300;
     letter-spacing: 1px;
-    display: block;
 }
 
 .plan .list__item {
@@ -335,11 +334,11 @@ a {
 
 .plan--popular .card__header::before {
     content: url(..//images/popular.svg);
-    width: 40px;
     display: inline-block;
     position: absolute;
-    top: -6px;
     right: 5%;
+    top: -6px;
+    width: 40px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -356,4 +355,21 @@ a {
         font-size: 1.7rem;
 
     }
+}
+
+/* Media */
+.media {
+    display: flex;
+}
+
+.media__title { 
+    margin-top: 0;
+}
+
+.media__body {
+    margin: 0 2rem;
+} 
+
+.media__image {
+    margin-top: 1rem;
 }
