--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -156,14 +156,22 @@ a {
 }
 
 /* Icons */
-
 .icon {
     width: 40px;
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
+}
+
+.icon--white {
+    fill: white;
 }
 
 .icon-container {
@@ -176,8 +184,12 @@ a {
     width: 64px;
 }
 
-/* Buttons */
+.icon-container--accent {
+    fill: white;
+    background: var(--color-accent);
+}
 
+/* Buttons */
 .btn {
     border-radius: 40px;
     border: 0;
@@ -236,7 +248,6 @@ a {
 }
 
 /* Inputs */
-
 .input {
     border-radius: var(--border-radius);
     border: 3px solid var(--color-border);
@@ -273,7 +284,6 @@ a {
 }
 
 /* Cards */
-
 .card {
     border-radius: 7px;
     box-shadow: 0 0 20px 10px #f3f3f3;
@@ -299,7 +309,6 @@ a {
 }
 
 /* Plans */
-
 .plan__name {
     color: #fff;
     font-size: 2.4rem;
@@ -445,5 +454,139 @@ a {
 @media screen and (min-width: 1024px) {
     .grid--1x3 {
         grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* Testimonials */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image > img {
+    width: 100%
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    right: -32px;
+    top: 3rem;
+}
+
+@media screen and (min-width: 375px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 1.5rem;
+    }
+    .testimonial__image > .icon-container {
+        right: -30px;
+        
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 2rem;
+    }
+    .testimonial__image {
+        padding: 0 3rem;
+    }
+    .testimonial__image > .icon-container {
+        right: 0;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 1.5rem;
+        
+    }
+    .testimonial {
+        padding: 2rem 0 2rem 0;
+    }
+    .testimonial .quote {
+        margin-left: 2rem;
+    }
+    .testimonial .quote__organization {
+        font-size: 1rem;
+    }
+    .testimonial__image {
+        padding-right: 3rem;
+    }
+    .testimonial__image > .icon-container {
+        top: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 850px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 2rem;
+        
+    }
+    .testimonial {
+        padding: 2rem 0 2rem 0;
+    }
+    .testimonial .quote {
+        margin-left: 2rem;
+    }
+    .testimonial .quote__organization {
+        font-size: 1.5rem;
+    }
+    .testimonial__image {
+        padding-right: 3rem;
+    }
+    .testimonial__image > .icon-container {
+        top: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1050px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 2.5rem;
+        
+    }
+    .testimonial {
+        padding: 2rem 0 2rem 0;
+    }
+    .testimonial .quote {
+        margin-left: 2rem;
+    }
+    .testimonial .quote__organization {
+        font-size: 2rem;
+    }
+    .testimonial__image {
+        padding-right: 3rem;
+    }
+    .testimonial__image > .icon-container {
+        top: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1230px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 3rem;
+    }
+    .testimonial {
+        padding: 2rem 0 2rem 0;
+    }
+    .testimonial .quote {
+        margin-left: 2rem;
+    }
+    .testimonial .quote__organization {
+        font-size: 2.5rem;
+    }
+    .testimonial__image {
+        padding-right: 3rem;
+    }
+    .testimonial__image > .icon-container {
+        top: 1.5rem;
     }
 }
