--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -704,3 +704,65 @@ a {
     margin: 0 auto;
     max-width: 1140px;
 }
+
+/* Navigation Bar */
+.nav {
+    align-items: center;
+    background: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 1rem;
+    padding: 1rem;
+}
+
+.nav__list {
+    margin: 0;
+    width: 100%;
+}
+
+.nav__item {
+    border-bottom: 1px solid #222;
+    padding: .5rem 2rem;
+}
+
+.nav__item>a {
+    color: #d2d0db;
+    transition: color .3s;
+}
+
+.nav__item > a:hover {
+    color: #fff;
+}
+
+.nav__toggler {
+    cursor: pointer;
+    opacity: .5;
+    transition: box-shadow .15s;
+}
+
+.nav.collapsible--expanded .nav__toggler {
+    border-radius: 5px;
+    box-shadow: 0 0 0 3px #666;
+    opacity: 1;
+}
+
+.nav__brand {
+    transform: translateY(5px);
+}
+
+@media screen and (min-width: 768px) {
+    .nav__toggler {
+        display: none;
+    }
+    .nav__list {
+        display: flex;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+        width: auto;
+    }
+    .nav__item {
+        border: 0;
+    }
+}
