--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -94,7 +94,6 @@ a {
 }
 
 /* Badges */
-
 .badge {
     border-radius: 20px;
     font-size: 2rem;
@@ -114,8 +113,10 @@ a {
 }
 
 .badge--small {
+    bottom: 5px;
     font-size: 1.6rem;
     padding: .5rem 1.5rem;
+    position: relative;
 }
 
 @media screen and (min-width: 1024px) {
@@ -148,6 +149,10 @@ a {
 .list--tick .list__item {
     padding-left: .5rem;
     margin-bottom: 1rem;
+}
+
+.list-hidden {
+    visibility: hidden;
 }
 
 @media screen and (min-width: 1024px) {
@@ -318,11 +323,19 @@ a {
     color: white;
 }
 
+.card--primary .badge--primary {
+    background: #126de4;
+}
+
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
 
 /* Plans */
+.plan {
+    transition: transform .2s ease-out;
+} 
+
 .plan__name {
     color: #fff;
     font-size: 2.4rem;
@@ -352,6 +365,10 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -363,6 +380,14 @@ a {
     right: 5%;
     top: -6px;
     width: 40px;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -826,4 +851,14 @@ a {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+}
+
+/* Plan Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    margin: 0 auto;
+    max-width: 500px;
 }
