Build the Showcase block component.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,6 +14,11 @@
 }
 
 /* Typography */
+::selection {
+    background: var(--color-primary);
+    color: white;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -41,8 +46,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
-
-
+    font-weight: 500;
 }
 
 p {
@@ -133,7 +137,6 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -144,6 +147,7 @@ a {
 .list--tick {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -179,6 +183,19 @@ a {
 .icon--white {
     fill: white;
 }
+
+.icon--pink {
+    fill: #f2b2be;
+}
+
+.icon--yellow {
+    fill: #e9c28c;
+}
+
+.icon--purple {
+    fill: #c5b8fe;
+}
+
 
 .icon-container {
     align-items: center;
@@ -409,10 +426,15 @@ a {
 /* Media */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title { 
     margin-top: 0;
+}
+
+.media__title--white {
+    color: white;
 }
 
 .media__body {
@@ -720,17 +742,19 @@ a {
     color: #7b858b
 }
 
-.block--dark .block__heading {
+.block--dark h1, 
+.block--dark h2, 
+.block--dark h3 {
     color: white;
 }
 
 .block--skewed-right {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
@@ -802,10 +826,6 @@ a {
 }
 
 /* Hero */
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
-
 .hero__tagline {
     color: #b9c3cf;
     font-size: 2rem;
@@ -884,5 +904,23 @@ a {
 @media screen and (min-width: 768px) {
     .feature:nth-last-of-type(odd) .feature__content {
         order: 2;
+    }
+}
+
+/* Showcase */
+.block-showcase__image > img {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase__image {
+        justify-self: end;
+    }
+    .block-showcase__image > img {
+        max-width: 700px;
+        width: auto;
     }
 }
