--- a/components/block-testimonials.html
+++ b/components/block-testimonials.html
@@ -1,27 +1,24 @@
-<section class="block__header">
-  <header>
-    <h2>What our customers are Saying</h2>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, id.
-    </p>
+<section class="block">
+  <header class="block__header">
+    <h2>What our Customers are Saying</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, ipsam.</p>
   </header>
   <div class="container">
     <div class="card testimonial">
       <div class="grid grid--1x2">
         <div class="testimonial__image">
-          <img src="images/testimonial.jpg" alt="A happy, smiling customer." />
+          <img src="images/testimonial.jpg" alt="A happy, smiling customer" />
           <span class="icon-container icon-container--accent">
             <svg class="icon icon--white icon--small">
               <use xlink:href="images/sprite.svg#quotes"></use>
             </svg>
           </span>
         </div>
-        <blockquote class="quote testimonial__body">
+        <blockquote class="quote">
           <p class="quote__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-            consequatur deleniti. Ut iusto, odit officiis repudiandae quas
-            dolore, voluptatibus enim ratione incidunt corporis, debitis sunt ab
-            aperiam quidem sint minus!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            optio officiis dolore earum error eaque perferendis laudantium sed
+            praesentium dolorum.
           </p>
           <footer>
             <div class="media">
@@ -30,7 +27,7 @@
                   <use xlink:href="images/sprite.svg#line"></use>
                 </svg>
               </div>
-              <div class="media__body quote __body">
+              <div class="media__body">
                 <h3 class="media__title quote__author">John Smith</h3>
                 <p class="quote__organization">ABC Company</p>
               </div>
