--- a/components/blocks.html
+++ b/components/blocks.html
@@ -1,25 +1,9 @@
-<section class="block container">
+<section class="block block--dark block--skewed-left">
   <header class="block__header">
     <h2 class="block__heading">Heading</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, officiis?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+      laboriosam.
     </p>
   </header>
-  <div style="width: 30%; padding: 4rem">
-    <div class="card card--secondary">
-      <header class="card__header">Card Title</header>
-      <div class="card__body">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum,
-        assumenda?
-      </div>
-    </div>
-  </div>
-</section>
-<section class="block block--dark block--skewed-left">
-  <div class="container">
-    <h2 class="block__heading">Heading</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, officiis?
-    </p>
-  </div>
 </section>
