--- a/components/media.html
+++ b/components/media.html
@@ -7,8 +7,9 @@
   <div class="media__body">
     <h3 class="media__title">Easy Start & Managed Updates</h3>
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio consectetur
-      itaque, libero beatae voluptates autem! Omnis aut et quibusdam asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quisquam,
+      ex nostrum vero voluptates dicta excepturi vel perspiciatis consequuntur
+      ab.
     </p>
   </div>
 </div>
