--- a/components/quotes.html
+++ b/components/quotes.html
@@ -1,9 +1,8 @@
 <blockquote class="quote">
   <p class="quote__text">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-    consequatur deleniti. Ut iusto, odit officiis repudiandae quas dolore,
-    voluptatibus enim ratione incidunt corporis, debitis sunt ab aperiam quidem
-    sint minus!
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio
+    officiis dolore earum error eaque perferendis laudantium sed praesentium
+    dolorum.
   </p>
   <footer>
     <div class="media">
@@ -12,7 +11,7 @@
           <use xlink:href="images/sprite.svg#line"></use>
         </svg>
       </div>
-      <div class="media__body quote __body">
+      <div class="media__body">
         <h3 class="media__title quote__author">John Smith</h3>
         <p class="quote__organization">ABC Company</p>
       </div>
