Problem with "main" in package.json

--- a/components/callout.html
+++ b/components/callout.html
@@ -3,9 +3,8 @@
     <div class="callout__content">
       <h2 class="callout__heading">Ready to Get Started?</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-        voluptate tempora qui distinctio consequatur aliquid pariatur cupiditate
-        quas cum fugit.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quibusdam
+        amet placeat, a aliquam iste natus explicabo deleniti optio ullam!
       </p>
     </div>
     <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
