--- a/components/showcase-block.html
+++ b/components/showcase-block.html
@@ -1,6 +1,6 @@
 <section class="block block--dark block--skewed-right block-showcase">
   <header class="block__header">
-    <h2>User-friendly Control Panel</h2>
+    <h2>User-Friendly Control Panel</h2>
   </header>
   <div class="container grid grid--1x2">
     <picture class="block-showcase__image">
@@ -12,7 +12,7 @@
         type="image/png"
         srcset="images/ipad.png 1x, images/ipad@2x.png 2x"
       />
-      <img src="images/ipad.png" alt="" />
+      <img src="images/ipad.png" alt="picture of iPad" />
     </picture>
     <ul class="list">
       <li>
@@ -25,9 +25,9 @@
           <div class="media__body">
             <h3 class="media__title">Easy Start & Managed Updates</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-              quisquam, ex nostrum vero voluptates dicta excepturi vel
-              perspiciatis consequuntur ab.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
+              consectetur itaque, libero beatae voluptates autem! Omnis aut et
+              quibusdam asperiores!
             </p>
           </div>
         </div>
@@ -40,11 +40,11 @@
             </svg>
           </div>
           <div class="media__body">
-            <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+            <h3 class="media__title">Staging, Git & WP-CLI</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-              quisquam, ex nostrum vero voluptates dicta excepturi vel
-              perspiciatis consequuntur ab.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
+              consectetur itaque, libero beatae voluptates autem! Omnis aut et
+              quibusdam asperiores!
             </p>
           </div>
         </div>
@@ -59,9 +59,9 @@
           <div class="media__body">
             <h3 class="media__title">Dynamic Caching & More</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-              quisquam, ex nostrum vero voluptates dicta excepturi vel
-              perspiciatis consequuntur ab.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
+              consectetur itaque, libero beatae voluptates autem! Omnis aut et
+              quibusdam asperiores!
             </p>
           </div>
         </div>
