--- a/components/buttons.html
+++ b/components/buttons.html
@@ -1,2 +1,5 @@
-<button class="btn btn--primary">Buy Now</button>
-<a href="#" class="btn btn--secondary btn--block">Buy Now</a>
+<button class="btn btn--primary">Get started</button>
+<button class="btn btn--secondary">Get started</button>
+<button class="btn btn--accent">Get started</button>
+<button class="btn btn--outline">Get started</button>
+<button class="btn btn--block">Buy now</button>
